@@ -8,8 +8,6 @@ plugins {
     application
 }
 
-val moduleName by extra("isma.isma.next.app.main")
-
 javafx {
     version = "23.0.1"
     modules = listOf("javafx.controls", "javafx.fxml")
@@ -18,11 +16,6 @@ javafx {
 application {
     mainModule.set("isma.ui.app")
     mainClass.set("ru.isma.next.app.launcher.IsmaApplication")
-
-    applicationDefaultJvmArgs = listOf(
-        //"--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
-        //"--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
-    )
 }
 
 dependencies {
@@ -33,7 +26,6 @@ dependencies {
     implementation(libs.kotlinx.serialization.json)
     implementation(libs.koin.core)
     implementation(libs.tornadofx.core)
-    implementation(libs.fxmisc.richtext.core)
     implementation("org.kordamp.ikonli:ikonli-javafx:12.3.1")
     implementation("org.kordamp.ikonli:ikonli-material2-pack:12.3.1")
     implementation("org.controlsfx:controlsfx:11.1.2")
@@ -44,13 +36,13 @@ dependencies {
     implementation(project(":isma-lisma"))
     implementation(project(":isma-next-core"))
     implementation(project(":isma-intg-api"))
-    implementation(project(":isma-next-integration-library"))
     implementation(project(":isma-next-common-services"))
     implementation(project(":isma-ui:blueprint-editor"))
     implementation(project(":isma-ui:text-editor"))
     implementation(project(":isma-ui:toolkit"))
     implementation(project(":isma-ui:grin-nested"))
     implementation(project(":isma-next-services-simulation-abstractions"))
+    implementation(project(":isma-next-integration-library"))
 
 
     api(project(":isma-intg-core"))
